--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       MYSQL_DATABASE: app
       MYSQL_ROOT_PASSWORD: my-secret-pw
     volumes:
+      - ${PWD}/gw2challenge.sql:/docker-entrypoint-initdb.d/schema.sql
       - db:/var/lib/mysql
     networks:
       - db
